--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
         Amount <input type="number"  id="principal">  <br/>
         Rate <input type="number"  id="rate">  <br/>
-        No. of Year <input type="number"  id="years">  <br/>
+        No. of Years <input type="number"  id="years">  <br/>
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
+        <button onclick="compute()">Compute Interest</button>
     </body>
 </html>
