--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     </head>
     <body>
         <h1>Simple Interest Calculator</h1>
+        <fieldset>
+            
+            <label for="principal">Amount</label>
+            <input type="number" id="principal" name="principal">
+            <br/><br/>
+            <label for="rate">Interest Rate</label>
+            <input type="number" id="rate" name="rate">
+            <br/><br/>
+            <label for="years">No. of Years</label>
+            <input type="email" id="years" name="years">
+        </fieldset>
+        <br/><br/>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        
         Interest : <span id="result"></span><br>
 
         <button onclick="compute()">Compute Interest</button>
