--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="number" id="rate" name="rate">
             <br/><br/>
             <label for="years">No. of Years</label>
-            <input type="email" id="years" name="years">
+            <input type="number" id="years" name="years">
         </fieldset>
         <br/><br/>
 
