--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="b">
 		
             <label for="principal">Amount</label>
-            <input type="number" id="principal" name="principal">
+            <input type="text" id="principal" name="principal">
             <br/><br/>
             <label for="rate">Interest Rate</label>
             <input type="range" id="rate" name="rate" min="0" max="25" step="0.5" value="0" oninput="roi.value=rate.value;">
