--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
     <head>
+	<title>Web App Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-
+	<div class="rcorners">
 	<div class="a">
         <h1>Simple Interest Calculator</h1>
-    </div>
+       </div>
 	<div class="b">
 		<table>
 		<tr>
@@ -16,12 +17,23 @@
             
 		</tr><tr>
             <td><label for="rate">Interest Rate</label></td>
-            <td><input type="range" id="rate" name="rate" min="0" max="25" step="0.5" value="0" oninput="roi.value=rate.value;">
-		    <output name="roi" id="roi" for="rate">0</output><label for="percent">&#37;</label></td>
+            <td><input type="range" id="rate" name="rate" min="1" max="20" step="0.5" value="1" oninput="roi.value=rate.value;">
+		    <output name="roi" id="roi" for="rate">1</output><label for="percent">&#37;</label></td>
             
 		</tr><tr>
             <td><label for="years">No. of Years</label></td>
-            <td><input type="number" id="years" name="years" style="width: 4em" min="0" max="100"></td>
+            <td><select id="years" name="years" style="width: 4em" >
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				</select></td>
 		
         </tr><tr>
 			 <td><button onclick="compute()">Compute Interest</button></td>
@@ -32,8 +44,9 @@
 		
 		<p id="res"></p>
 	</div>
-	<div class="c">
-		<p style="font-family: Arial, Helvetica, sans-serif";>&copy; Everyone can get rich</p>
-	</div>
-	</body>
+<div class="c">
+<p style="font-family: Arial, Helvetica, sans-serif";>&copy; Everyone can get rich</p>
+</div>
+</div>
+    </body>
 </html>
