--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<table>
 		<tr>
             <td><label for="principal">Amount</label></td>
-            <td><input type="text" id="principal" name="principal"></td>
+            <td><input type="number" id="principal" name="principal"></td>
             
 		</tr><tr>
             <td><label for="rate">Interest Rate</label></td>
